# ros2-logiflow

./: README.md  brain_node.py
arm_test_pkg/: package.xml  setup.py
arm_test_pkg/arm_test_pkg/: pick_node.py
arm_test_pkg/arm_test_pkg/src/brain_pkg/brain_pkg/: vision_node.py
arm_test_pkg/arm_test_pkg/test/: coords_grip.py  grip.py  test_gripper.py
brain_pkg/brain_pkg/: brain_node.py  qr_verify_node.py  vision_node.py
doc/: 3차 프로젝트 1차_v3_윤정_수정.pptx  3차 프로젝트_V2  AGV_tech_slides_윤정.pptx  AGV_tech_slides_윤정_수정.pptx  주간진행상황_dashboard_0624.pptx  팀goong_주간발표_20260624_v2.pptx
robot-dashboard/: README.md
robot-dashboard/backend/: database.py  main.py  models.py  robot.db  ros_node.py  ws_manager.py
robot-dashboard/backend/routers/: history.py  missions.py  products.py  zones.py
robot-dashboard/frontend/: package-lock.json  package.json
robot-dashboard/frontend/src/: App.jsx  api.js  index.css  store.js  ws.js
robot-dashboard/frontend/src/components/: CameraFeed.css  CameraFeed.jsx  InterventionPanel.css  InterventionPanel.jsx  MissionPanel.css  MissionPanel.jsx  StatusMap.css  StatusMap.jsx
robot-dashboard/frontend/src/pages/: History.css  History.jsx  Monitor.css  Monitor.jsx  Products.css  Products.jsx  Zones.css  Zones.jsx
src/brain_pkg/: package.xml  setup.cfg  setup.py
src/brain_pkg/brain_pkg/: brain_node.py
test/: get_coords.py  measurement.py
tracer/: package.xml  setup.cfg  setup.py
tracer/launch/: tracer_filter.launch.py
tracer/tracer/: tracer_node.py  vel_filter_node.py
