<?xml version="1.0"?>
<package format="3">
  <name>arm_test_pkg</name>
  <version>0.0.1</version>
  <description>myCobot 280 Pi pick test</description>
  <maintainer email="er@todo">er</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
